--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/PovertyWEBGL_Testing.loader.js";
       var config = {
-        dataUrl: buildUrl + "/PovertyWEBGL_Testing.data.unityweb",
-        frameworkUrl: buildUrl + "/PovertyWEBGL_Testing.framework.js.unityweb",
-        codeUrl: buildUrl + "/PovertyWEBGL_Testing.wasm.unityweb",
+        dataUrl: buildUrl + "/PovertyWEBGL_Testing.data",
+        frameworkUrl: buildUrl + "/PovertyWEBGL_Testing.framework.js",
+        codeUrl: buildUrl + "/PovertyWEBGL_Testing.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Indiana University eLearning Design and Services",
         productName: "C'est La Vie The Game of Social Life",
