--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div id="unity-build-title">HTML_TST</div>
       </div>
     </div>
+    <script src="external.js"></script>
     <script>
       var container = document.querySelector("#unity-container");
       var canvas = document.querySelector("#unity-canvas");
