--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div id="unity-build-title">HTML_TST</div>
       </div>
     </div>
+    <button id="btn_id">Click me to test HTML button click</button>
     <script src="external.js"></script>
     <script>
       var container = document.querySelector("#unity-container");
