--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | HTML_TST</title>
+    <title>Unity WebGL Player | C'est La Vie The Game of Social Life</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600></canvas>
+      <canvas id="unity-canvas" width=585 height=1266></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -20,10 +20,9 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">HTML_TST</div>
+        <div id="unity-build-title">C'est La Vie The Game of Social Life</div>
       </div>
     </div>
-    <button id="btn_id">Click me to test HTML button click</button>
     <script src="external.js"></script>
     <script>
       var container = document.querySelector("#unity-container");
@@ -58,15 +57,15 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/PovertyGameBuild.loader.js";
+      var loaderUrl = buildUrl + "/TST_Cest.loader.js";
       var config = {
-        dataUrl: buildUrl + "/PovertyGameBuild.data",
-        frameworkUrl: buildUrl + "/PovertyGameBuild.framework.js",
-        codeUrl: buildUrl + "/PovertyGameBuild.wasm",
+        dataUrl: buildUrl + "/TST_Cest.data",
+        frameworkUrl: buildUrl + "/TST_Cest.framework.js",
+        codeUrl: buildUrl + "/TST_Cest.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "HTML_TST",
-        productVersion: "1.0",
+        companyName: "Indiana University eLearning Design and Services",
+        productName: "C'est La Vie The Game of Social Life",
+        productVersion: "0.4",
         showBanner: unityShowBanner,
       };
 
@@ -95,8 +94,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
+        canvas.style.width = "585px";
+        canvas.style.height = "1266px";
       }
 
       loadingBar.style.display = "block";
