--- a/index.html
+++ b/index.html
@@ -23,16 +23,12 @@
       <div id="unity-warning"> </div>
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
-        <div id="unity-fullscreen-button"></div>
+        <!-- <div id="unity-fullscreen-button"></div> -->
         <div id="unity-build-title">C'est La Vie The Game of Social Life</div>
       </div>
     </div>
   </div>
   <div id="AssetsContainer" style="display: flex; background-color: #737373; flex-direction: column; align-items: center; justify-content: center; height: fit-content; transform: translate(0%, 460px)">
-    <p class="LoginPrompt">TitleTxt</p>
-    <input class="LoginField">
-    <p class="ErrorText">error login not found</p>
-    <button class="LoginSubmit"></button>
   </div>
   <div id="ButtonContainer" style="display: flex; background-color: #737373; flex-direction: column; align-items: center; justify-content: center; height: fit-content; transform: translate(0%, 460px)">
     <p id="TitleText" class="TitleTxt"></p>
@@ -44,7 +40,7 @@
       var canvas = document.querySelector("#unity-canvas");
       var loadingBar = document.querySelector("#unity-loading-bar");
       var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
+      // var fullscreenButton = document.querySelector("#unity-fullscreen-button");
       var warningBanner = document.querySelector("#unity-warning");
 
       // Shows a temporary message banner/ribbon for a few seconds, or
@@ -122,9 +118,9 @@
           progressBarFull.style.width = 100 * progress + "%";
         }).then((unityInstance) => {
           loadingBar.style.display = "none";
-          fullscreenButton.onclick = () => {
-            unityInstance.SetFullscreen(1);
-          };
+          // fullscreenButton.onclick = () => {
+          //   unityInstance.SetFullscreen(1);
+          // };
         }).catch((message) => {
           alert(message);
         });
